--- a/views/new.ejs
+++ b/views/new.ejs
@@ -37,10 +37,10 @@
               <label for="map-category">Category</label>
               <select name="map-category" id="map-category">
                 <option value="">Please Select a Category...</option>
-                <option value="city">City</option>
-                <option value="food">Food</option>
-                <option value="nature">Nature</option>
-                <option value="other">Other</option>
+                <option value="City">City</option>
+                <option value="Food">Food</option>
+                <option value="Nature">Nature</option>
+                <option value="Other">Other</option>
               </select>
             </div>
             <div class="mb-3">
