Linked front to back end for favourites buttons

--- a/views/map-viewer.ejs
+++ b/views/map-viewer.ejs
@@ -74,7 +74,8 @@
 
     </div>
     <p id="mapID"><%= map.id %></p>
-    <p id="userID"><%= user %></p>
+    <p id="userName"><%= user %></p>
+    <p id="userID"><%= userID %></p>
 
     <script async
       src="https://maps.googleapis.com/maps/api/js?key=<%= key %>&callback=initMap">
