--- a/views/maps.ejs
+++ b/views/maps.ejs
@@ -48,6 +48,7 @@
                 <p><%= map.description %></p>
                 <small><%= map.category %></small>
                 <small class='mapID'><%= map.id %></small>
+                <small class='userID'><%= userID %></small>
               </td>
             </tr>
             <% } %>
