--- a/views/map-viewer.ejs
+++ b/views/map-viewer.ejs
@@ -80,7 +80,8 @@
       </aside>
     </div>
     <p id="mapID"><%= map.id %></p>
-    <p id="userID"><%= user %></p>
+    <p id="userName"><%= user %></p>
+    <p id="userID"><%= userID %></p>
 
     <script
       async
