Fix Bug with Creating new Maps, Converts Address to Coords

--- a/views/new.ejs
+++ b/views/new.ejs
@@ -40,6 +40,7 @@
                 <option value="City">City</option>
                 <option value="Food">Food</option>
                 <option value="Nature">Nature</option>
+                <option value="Outdoor-Rec">Outdoor Recreation</option>
                 <option value="Other">Other</option>
               </select>
             </div>
@@ -51,6 +52,14 @@
                 rows="3"
                 placeholder="Map Description"
               ></textarea>
+            </div>
+            <div class="mb-3">
+              <label for="address">Starting Address</label>
+              <input
+                type="text"
+                name="address"
+                placeholder="1 yonge street, Toronto"
+              />
             </div>
             <div class="mb-3">
               <label for="map-img-url">Thumbnail Photo URL</label>
