edit button toggles the form

--- a/styles/map-viewer.scss
+++ b/styles/map-viewer.scss
@@ -4,7 +4,6 @@ h2 {
 }
 
 .container {
-
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -49,8 +48,7 @@ h2 {
     }
   }
 
-
-  #addLocation {
+  .location-form {
     display: none;
     width: 80%;
     border: 3px solid cadetblue;
