update point with edit button

--- a/views/map-viewer.ejs
+++ b/views/map-viewer.ejs
@@ -82,7 +82,7 @@
                         name="markerDesc"
                       ></textarea>
                       <button
-                        onclick="editPoint('<%= map.id %>', '<%= point.title %>')"
+                        onclick="editPoint('<%= map.id %>', '<%= point.id %>')"
                         type="button"
                         class="btn btn-primary"
                       >
