toggle edit point form via edit button

--- a/views/map-viewer.ejs
+++ b/views/map-viewer.ejs
@@ -70,7 +70,7 @@
                 <% if (userID) { %>
                 <div>
                   <!-- EDIT POINT FORM -->
-                  <div id="edit-point-form" class="location-form">
+                  <div class="location-form edit-point-form">
                     <form>
                       <label for="address">Address/Location</label>
                       <input id="address-field" name="address" type="text" />
@@ -92,9 +92,8 @@
                   </div>
                   <form>
                     <button
-                      id="edit-point-btn"
                       type="button"
-                      class="btn btn-primary"
+                      class="btn btn-primary edit-point-btn"
                     >
                       Edit
                     </button>
