--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,11 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <title>Wiki Maps - Register</title>
     <meta charset="utf-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, shrink-to-fit=no"
-    />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
 
     <!-- Bootstrap CSS -->
     <link
@@ -19,6 +17,7 @@
       rel="stylesheet"
       href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css"
     />
+    <link rel="icon" type="image/ico" href="/images/map.ico"/>
   </head>
   <body>
     <%- include('partials/_header') %>
