--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <title>Wiki Maps - Login</title>
     <meta charset="utf-8" />
     <meta
       name="viewport"
@@ -19,6 +20,7 @@
       rel="stylesheet"
       href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css"
     />
+    <link rel="icon" type="image/ico" href="/images/map.ico"/>
   </head>
   <body>
     <%- include('partials/_header') %>
