--- a/views/map-viewer.ejs
+++ b/views/map-viewer.ejs
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Wiki Maps</title>
-
+    <title>Wiki Maps - <%= map.title %></title>
+    <meta name='viewport' content='width=device-width, initial-scale=1.0, maximum-scale=1.0' />
     <link rel="stylesheet" href="/vendor/normalize-4.1.1.css" type="text/css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="/vendor/border-box.css" type="text/css" />
     <link rel="stylesheet" href="/styles/layout.css" type="text/css" />
     <link rel="stylesheet" href="/styles/map-viewer.css" type="text/css" />
+    <link rel="icon" type="image/ico" href="/images/map.ico"/>
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"
@@ -19,9 +20,8 @@
     <script type="text/javascript" src="/scripts/initMap.js"></script>
   </head>
   <body>
-    <header>
       <%- include('partials/_header') %>
-    </header>
+
 
     <h2><%= map.title %></h2>
 
@@ -31,10 +31,10 @@
       <div id="map-viewport"></div>
 
       <div class="options">
-        <button class="addLoc" data-placement="top" title="Add a Location!">
+        <button class="addLoc btn btn-outline-primary" data-placement="top" title="Add a Location!">
           Contribute
         </button>
-        <button class="favMap" data-placement="top" title="Add Map to Favourites!">
+        <button class="favMap btn" data-placement="top" title="Add Map to Favourites!">
           <i class="fa fa-heart"></i>
         </button>
 
@@ -56,7 +56,7 @@
       </div>
 
       <aside>
-        <table class="table">
+        <table class="table table-striped">
           <tbody>
             <% for (const point of points) { %>
             <tr>
