--- a/views/new.ejs
+++ b/views/new.ejs
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="/vendor/border-box.css" type="text/css" />
     <link rel="stylesheet" href="/styles/layout.css" type="text/css" />
     <link rel="stylesheet" href="/styles/maps-new.css" type="text/css" />
+    <link rel="icon" type="image/ico" href="/images/map.ico"/>
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"
