--- a/views/register.ejs
+++ b/views/register.ejs
@@ -3,7 +3,10 @@
   <head>
     <title>Wiki Maps - Register</title>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
 
     <!-- Bootstrap CSS -->
     <link
@@ -17,7 +20,11 @@
       rel="stylesheet"
       href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css"
     />
-    <link rel="icon" type="image/ico" href="/images/map.ico"/>
+    <link rel="stylesheet" href="/vendor/normalize-4.1.1.css" type="text/css" />
+    <link rel="stylesheet" href="/vendor/border-box.css" type="text/css" />
+    <link rel="stylesheet" href="/styles/layout.css" type="text/css" />
+    <link rel="stylesheet" href="/styles/maps.css" type="text/css" />
+    <link rel="icon" type="image/ico" href="/images/map.ico" />
   </head>
   <body>
     <%- include('partials/_header') %>
