link css to login and register views

--- a/styles/layout.scss
+++ b/styles/layout.scss
@@ -16,7 +16,10 @@ div.navlinks {
 html > body,
 header > nav {
   background-color: rgba(179, 215, 129, 0.406);
-  h1, h2, h3, h4 {
+  h1,
+  h2,
+  h3,
+  h4 {
     color: #244751;
   }
 }
