--- a/views/register.ejs
+++ b/views/register.ejs
@@ -61,10 +61,11 @@
             required
           />
         </div>
-        <div>
+        <!-- Stretch: add profile pix -->
+        <!-- <div>
           <label for="img">Select image:</label>
           <input type="file" id="img" name="img" accept="image/*" />
-        </div>
+        </div> -->
         <button type="submit" class="btn btn-primary">Submit</button>
       </form>
     </div>
