--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -2,14 +2,14 @@
 <html lang="en">
   <head>
     <title>Wiki Maps - My Profile</title>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8"/>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>WikiMap - New</title>
-    <link rel="stylesheet" href="/vendor/normalize-4.1.1.css" type="text/css" />
-    <link rel="stylesheet" href="/vendor/border-box.css" type="text/css" />
-    <link rel="stylesheet" href="/styles/layout.css" type="text/css" />
-    <link rel="stylesheet" href="/styles/users.css" type="text/css" />
+    <link rel="stylesheet" href="/vendor/normalize-4.1.1.css" type="text/css"/>
+    <link rel="stylesheet" href="/vendor/border-box.css" type="text/css"/>
+    <link rel="stylesheet" href="/styles/layout.css" type="text/css"/>
+    <link rel="stylesheet" href="/styles/users.css" type="text/css"/>
     <link rel="icon" type="image/ico" href="/images/map.ico"/>
 
     <link
@@ -59,9 +59,6 @@
               </div>
               <div class="profile-map-btns">
                 <a class="btn btn-primary" href="/maps/<%= ownerMap.id %>">View</a>
-                <form action="" class="">
-                  <button class="btn btn-danger" id="map-delete">Delete</button>
-                </form>
               </div>
             </div>
           <% } %>
@@ -110,7 +107,7 @@
                 <%= contributionMap.description %>
               </div>
               <div class="profile-map-btns">
-                <a class="btn btn-primary" href="/maps/<%= contributionMap.id %>">View</a>
+                <a class="btn btn-primary" href="/maps/<%= contributionMap.map_id %>">View</a>
               </div>
             </div>
           <% } %>
