--- a/views/map-viewer.ejs
+++ b/views/map-viewer.ejs
@@ -83,31 +83,28 @@
                   <div class="location-form edit-point-form">
                     <form>
                       <label for="address">Address/Location</label>
-                      <input id="address-field" name="address" type="text" />
+                      <input class="address-field" name="address" type="text" />
                       <label for="markerTitle">Title</label>
-                      <input id="title-field" name="markerTitle" />
+                      <input class="title-field" name="markerTitle" />
                       <label for="markerDesc">Description</label>
                       <textarea
-                        id="description-field"
+                        class="description-field"
                         name="markerDesc"
                       ></textarea>
                       <button
-                        onclick="editPoint('<%= map.id %>', '<%= point.id %>')"
                         type="button"
-                        class="btn btn-primary"
+                        class="btn btn-primary edit-point"
+                        data-map-id="<%= map.id %>"
+                        data-point-title="<%= point.title %>"
                       >
                         Edit Point
                       </button>
                     </form>
                   </div>
-                  <form>
-                    <button
-                      type="button"
-                      class="btn btn-primary edit-point-btn"
-                    >
-                      Edit
-                    </button>
-                  </form>
+                  <button type="button" class="btn btn-primary edit-point-btn">
+                    Edit
+                  </button>
+
                   <button
                     onclick="deletePoint('<%= map.id %>', '<%= point.title %>')"
                     type="button"
@@ -148,9 +145,9 @@
 
       const editPoint = (mapID, pointTitle) => {
         const data = {
-          address: $("#address-field").val(),
-          title: $("#title-field").val(),
-          description: $("#description-field").val(),
+          address: $(".address-field").val(),
+          title: $(".title-field").val(),
+          description: $(".description-field").val(),
         };
         $.ajax({
           url: `/maps/edit/${mapID}/points/${pointTitle}`,
