Fix nav to top of page when scrolling down

--- a/views/favourites.ejs
+++ b/views/favourites.ejs
@@ -22,7 +22,7 @@
   </head>
   <body>
     <%- include('partials/_header') %>
-    <main>
+    <main class="pageTitle">
       <div class="profile-maps-container">
         <section>
           <header>
