--- a/views/login.ejs
+++ b/views/login.ejs
@@ -24,7 +24,7 @@
   </head>
   <body>
     <%- include('partials/_header') %>
-    <div>
+    <div class="pageTitle">
       <form id="register-form" method="POST" action="/login">
         <div class="form-group">
           <input
