--- a/views/maps.ejs
+++ b/views/maps.ejs
@@ -22,12 +22,9 @@
   </head>
 
   <body>
-    <header>
-      <%- include('partials/_header') %>
-    </header>
+    <%- include('partials/_header') %>
 
-
-    <h1>Recent Maps</h1>
+    <h1 class='pageTitle'>Recent Maps</h1>
 
     <main class="show-maps">
       <section id="map-container">
