--- a/views/new.ejs
+++ b/views/new.ejs
@@ -23,7 +23,7 @@
   <body>
     <%- include('partials/_header') %>
 
-    <main>
+    <main class="pageTitle">
       <div class="map-new">
         <div>
           <h1>Create New Map</h1>
