--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -1,7 +1,7 @@
 <header class="partial">
     <nav class="navbar navbar-light">
       <div class="navlinks">
-        <a href="/maps">WikiMap</a>
+        <a href="/maps">WikiMaps</a>
         <% if (user) { %>
         <a href="/users/<%= user %>/favourites">Favourites</a>
         <a href="/users/<%= user %>/maps">My Maps</a>
