--- a/styles/layout.scss
+++ b/styles/layout.scss
@@ -2,6 +2,16 @@
 
 header.partial {
   margin-bottom: 1em;
+  height: 80px;
+  width: 100%;
+  position: fixed;
+  top: 0;
+  background-color: rgba(179, 215, 129, 1);
+  z-index: 9;
+}
+
+.pageTitle {
+  margin-top: 100px;
 }
 
 div.navlinks {
@@ -15,7 +25,6 @@ div.navlinks {
 
 html > body,
 header > nav {
-  background-color: rgba(179, 215, 129, 0.406);
   h1, h2, h3, h4 {
     color: #244751;
   }
