--- a/views/index.ejs
+++ b/views/index.ejs
@@ -20,7 +20,7 @@
 
   <body>
     <%- include('partials/_header') %>
-    <h1>Hello World!</h1>
+    <h1 class="pageTitle">Hello World!</h1>
   </body>
   <!-- jQuery library -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
