--- a/views/map-viewer.ejs
+++ b/views/map-viewer.ejs
@@ -23,7 +23,7 @@
       <%- include('partials/_header') %>
 
 
-    <h2><%= map.title %></h2>
+    <h2 class="pageTitle"><%= map.title %></h2>
 
 
     <div class="container">
