--- a/views/maps.ejs
+++ b/views/maps.ejs
@@ -28,15 +28,9 @@
   </head>
 
   <body>
-<<<<<<< HEAD
-    <header><%- include('partials/_header') %></header>
-
-    <h1>Recent Maps</h1>
-=======
     <%- include('partials/_header') %>
 
-    <h1 class='pageTitle'>Recent Maps</h1>
->>>>>>> master
+    <h1 class="pageTitle">Recent Maps</h1>
 
     <main class="show-maps">
       <section id="map-container">
