--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -1,27 +1,31 @@
 <header class="partial">
-    <nav class="navbar navbar-light">
-      <div class="navlinks">
-        <a href="/maps">WikiMaps</a>
-        <% if (user) { %>
-        <a href="/users/<%= user %>/favourites">Favourites</a>
-        <a href="/users/<%= user %>/maps">My Maps</a>
-        <a href="/maps/new">New Map</a>
-        <% } else { %>
-        <a href="#">Favourites</a>
-        <a href="#">My Maps</a>
-        <a href="#">New Map</a>
-        <% } %>
-      </div>
-      <div>
-        <% if (!user) { %>
-        <a href="/login">Login</a>
-        <a href="/register">Register</a>
-        <% } else { %>
-          <label for="user" style="margin-bottom: 0;">Logged In As: <a href="/maps"><%= user %></a></label>
-          <form method="POST" action="/logout" class="form-inline">
-            <button type="submit" class="btn btn-outline-danger my-2 my-sm-0">Logout</button>
-          </form>
-        <% } %>
-      </div>
-    </nav>
+  <nav class="navbar navbar-light">
+    <div class="navlinks">
+      <a href="/maps" id="wiki-logo">WikiMaps</a>
+      <% if (user) { %>
+      <a href="/users/<%= user %>/favourites">Favourites</a>
+      <a href="/users/<%= user %>/maps">My Maps</a>
+      <a href="/maps/new">New Map</a>
+      <% } else { %>
+      <a href="#">Favourites</a>
+      <a href="#">My Maps</a>
+      <a href="#">New Map</a>
+      <% } %>
+    </div>
+    <div>
+      <% if (!user) { %>
+      <a href="/login">Login</a>
+      <a href="/register">Register</a>
+      <% } else { %>
+      <label for="user" style="margin-bottom: 0"
+        >Logged In As: <a href="/maps"><%= user %></a></label
+      >
+      <form method="POST" action="/logout" class="form-inline">
+        <button type="submit" class="btn btn-outline-danger my-2 my-sm-0">
+          Logout
+        </button>
+      </form>
+      <% } %>
+    </div>
+  </nav>
 </header>
