--- a/styles/users.scss
+++ b/styles/users.scss
@@ -48,15 +48,22 @@ main {
         padding: 1em;
       }
       .profile-map-btns {
-        width: 40%;
+        width: 60%;
         display: flex;
         justify-content: end;
         margin-bottom: 1rem;
 
         .btn {
-          width: 50%;
           margin: auto;
           margin-left: 0.5rem;
+        }
+        .btn-primary {
+          width: 30%;
+
+        }
+        .remove-fav {
+          width: 70%;
+
         }
       }
     }
@@ -98,14 +105,30 @@ main {
           width: 20%
         }
 
-        .profile-maps-content {
-          width: 70%
+        .profile-map-content {
+          width: 60%;
+          display: flex;
+
+          header {
+            width: 30%;
+          }
+          div {
+            width: 70%;
+          }
+
         }
         .profile-map-btns {
-          width: 70%;
-          flex-direction: row;
+          width: 20%;
+          flex-direction: column;
           margin-bottom: 0;
           margin-right: 0.5rem;
+          padding: 0.5rem;
+
+          .btn {
+            width: 100%;
+            margin-right: 1rem;
+            float: right;
+          }
         }
       }
 
