--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -2,15 +2,15 @@
 <html lang="en">
   <head>
     <title>Wiki Maps - My Profile</title>
-    <meta charset="UTF-8"/>
-    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WikiMap - New</title>
-    <link rel="stylesheet" href="/vendor/normalize-4.1.1.css" type="text/css"/>
-    <link rel="stylesheet" href="/vendor/border-box.css" type="text/css"/>
-    <link rel="stylesheet" href="/styles/layout.css" type="text/css"/>
-    <link rel="stylesheet" href="/styles/users.css" type="text/css"/>
-    <link rel="icon" type="image/ico" href="/images/map.ico"/>
+    <link rel="stylesheet" href="/vendor/normalize-4.1.1.css" type="text/css" />
+    <link rel="stylesheet" href="/vendor/border-box.css" type="text/css" />
+    <link rel="stylesheet" href="/styles/layout.css" type="text/css" />
+    <link rel="stylesheet" href="/styles/users.css" type="text/css" />
+    <link rel="icon" type="image/ico" href="/images/map.ico" />
 
     <link
       rel="stylesheet"
@@ -18,10 +18,19 @@
       integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS"
       crossorigin="anonymous"
     />
+    <!-- External Fonts -->
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Fredoka+One&family=Rubik:ital,wght@0,300;0,500;1,300;1,500&display=swap"
+      rel="stylesheet"
+    />
 
     <script type="text/javascript" src="/vendor/jquery-3.0.0.js"></script>
     <script type="text/javascript" src="/scripts/app.js"></script>
-    <script type="text/javascript" src="/scripts/profile-favourites.js"></script>
+    <script
+      type="text/javascript"
+      src="/scripts/profile-favourites.js"
+    ></script>
   </head>
   <body>
     <%- include('partials/_header') %>
@@ -42,81 +51,101 @@
         </div>
         <section id="owner-maps-container" class="show">
           <% if (!ownerMaps.length) { %>
-            <h3>No maps created. Add a new map <a href="/maps/new">here</a></h3>
-          <% } %>
-          <% for (const ownerMap of ownerMaps) { %>
-            <div class="mb-3">
-              <div class="profile-map">
-                <img src="<%= ownerMap.map_image_url %>" alt="<%= ownerMap.title %>" class="profile-map-img">
-                <div class="profile-map-content">
-                  <header>
-                    <h5><%= ownerMap.title %></h5>
-                    <span>Category: </span>
-                    <small class="badge bg-info text-dark">
-                      <%= ownerMap.category %>
-                    </small>
-                  </header>
-                  <%= ownerMap.description %>
-                </div>
-                <div class="profile-map-btns">
-                  <a class="btn btn-primary" href="/maps/<%= ownerMap.id %>">View</a>
-                </div>
+          <h3>No maps created. Add a new map <a href="/maps/new">here</a></h3>
+          <% } %> <% for (const ownerMap of ownerMaps) { %>
+          <div class="mb-3">
+            <div class="profile-map">
+              <img
+                src="<%= ownerMap.map_image_url %>"
+                alt="<%= ownerMap.title %>"
+                class="profile-map-img"
+              />
+              <div class="profile-map-content">
+                <header>
+                  <h5><%= ownerMap.title %></h5>
+                  <span>Category: </span>
+                  <small class="badge bg-info text-dark">
+                    <%= ownerMap.category %>
+                  </small>
+                </header>
+                <%= ownerMap.description %>
+              </div>
+              <div class="profile-map-btns">
+                <a class="btn btn-primary" href="/maps/<%= ownerMap.id %>"
+                  >View</a
+                >
               </div>
             </div>
+          </div>
           <% } %>
         </section>
         <section id="favourite-maps-container" class="hide">
           <% if (!favouriteMaps.length) { %>
-            <h3>You have no favourites. View maps <a href="/">here</a></h3>
-          <% } %>
-          <% for (const favMap of favouriteMaps) { %>
-            <div class="mb-3">
-              <div class="profile-map">
-                <img src="<%= favMap.map_image_url %>" alt="<%= favMap.title %>" class="profile-map-img">
-                <div class="profile-map-content">
-                  <header>
-                    <h5><%= favMap.title %></h5>
-                    <span>Category: </span>
-                    <small class="badge bg-info text-dark">
-                      <%= favMap.category %>
-                    </small>
-                  </header>
-                  <div>
-                    <%= favMap.description %>
-                  </div>
-                </div>
-                <div class="profile-map-btns">
-                  <a class="btn btn-primary" href="/maps/<%= favMap.map_id %>">View</a>
-                  <button class="btn btn-danger remove-fav" value="<%= favMap.map_id %>">Remove Favourite</button>
-                </div>
+          <h3>You have no favourites. View maps <a href="/">here</a></h3>
+          <% } %> <% for (const favMap of favouriteMaps) { %>
+          <div class="mb-3">
+            <div class="profile-map">
+              <img
+                src="<%= favMap.map_image_url %>"
+                alt="<%= favMap.title %>"
+                class="profile-map-img"
+              />
+              <div class="profile-map-content">
+                <header>
+                  <h5><%= favMap.title %></h5>
+                  <span>Category: </span>
+                  <small class="badge bg-info text-dark">
+                    <%= favMap.category %>
+                  </small>
+                </header>
+                <div><%= favMap.description %></div>
+              </div>
+              <div class="profile-map-btns">
+                <a class="btn btn-primary" href="/maps/<%= favMap.map_id %>"
+                  >View</a
+                >
+                <button
+                  class="btn btn-danger remove-fav"
+                  value="<%= favMap.map_id %>"
+                >
+                  Remove Favourite
+                </button>
               </div>
             </div>
+          </div>
           <% } %>
         </section>
         <section id="contribution-maps-container" class="hide">
           <% if (!contributionMaps.length) { %>
-            <h3>You have no contributions. View maps <a href="/">here</a></h3>
-          <% } %>
-          <% for (const contributionMap of contributionMaps) { %>
-            <div class="mb-3">
-              <div class="profile-map">
-                <img src="<%= contributionMap.map_image %>" alt="<%= contributionMap.title %>" class="profile-map-img">
-                <div class="profile-map-content">
-                  <header>
-                    <h5><%= contributionMap.title %></h5>
-                    <span>Category: </span>
-                    <small class="badge bg-info text-dark">
-                      <%= contributionMap.category %>
-                    </small>
-                  </header>
+          <h3>You have no contributions. View maps <a href="/">here</a></h3>
+          <% } %> <% for (const contributionMap of contributionMaps) { %>
+          <div class="mb-3">
+            <div class="profile-map">
+              <img
+                src="<%= contributionMap.map_image %>"
+                alt="<%= contributionMap.title %>"
+                class="profile-map-img"
+              />
+              <div class="profile-map-content">
+                <header>
+                  <h5><%= contributionMap.title %></h5>
+                  <span>Category: </span>
+                  <small class="badge bg-info text-dark">
+                    <%= contributionMap.category %>
+                  </small>
+                </header>
 
-                  <%= contributionMap.description %>
-                </div>
-                <div class="profile-map-btns">
-                  <a class="btn btn-primary" href="/maps/<%= contributionMap.map_id %>">View</a>
-                </div>
+                <%= contributionMap.description %>
+              </div>
+              <div class="profile-map-btns">
+                <a
+                  class="btn btn-primary"
+                  href="/maps/<%= contributionMap.map_id %>"
+                  >View</a
+                >
               </div>
             </div>
+          </div>
           <% } %>
         </section>
       </div>
